feat: 공연 게시글 삭제 기능 구현
- 게시글 작성자만 삭제 가능하도록 권한 검증 추가
- S3에서 프로필 이미지 및 상세 이미지 삭제
- scheduleSeat, schedule, 옵션 등 하위 연관 엔티티 순차 삭제
- 마지막으로 performancePost 엔티티 삭제

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     // 테스트
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation("software.amazon.awssdk:s3:2.20.63")
+    implementation("software.amazon.awssdk:sts:2.20.63")
 }
 
 
