--- a/build.gradle
+++ b/build.gradle
@@ -20,35 +20,56 @@ repositories {
 }
 
 dependencies {
-    // Spring Boot 기본 스타터
+    // ========== Spring Boot 기본 스타터 ==========
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
-    // Kotlin
+    // ========== Kotlin ==========
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 
-    // JWT
+    // ========== JWT ==========
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    // MySQL
+    // ========== Database ==========
+    // MySQL (운영용)
     implementation 'com.mysql:mysql-connector-j:8.0.33'
+    // H2 (테스트용 인메모리 DB)
+    testImplementation 'com.h2database:h2'
 
-    // AWS S3
+    // ========== AWS ==========
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.2'
+    implementation 'software.amazon.awssdk:s3:2.20.63'
+    implementation 'software.amazon.awssdk:sts:2.20.63'
 
-    // Swagger
+    // ========== API 문서화 ==========
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
-    // 테스트
+    // ========== 테스트 ==========
+    // Spring Boot Test (JUnit 5, Mockito, AssertJ 포함)
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation("software.amazon.awssdk:s3:2.20.63")
-    implementation("software.amazon.awssdk:sts:2.20.63")
+
+    // Kotlin Test
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
+
+    // Mockito Kotlin (Kotlin DSL 지원)
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.1.0'
+
+    // MockK (Kotlin 전용 Mock 라이브러리)
+    testImplementation 'io.mockk:mockk:1.13.8'
+
+    // AssertJ (더 풍부한 Assertion)
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+
+    // Testcontainers (통합 테스트용)
+    testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
+    testImplementation 'org.testcontainers:mysql:1.19.3'
 }
 
 
