--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     // Testcontainers (통합 테스트용)
     testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
     testImplementation 'org.testcontainers:mysql:1.19.3'
+
+    // JBoss Logging 추가
+    implementation("org.jboss.logging:jboss-logging:3.5.3.Final")
 }
 
 
